--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </table>
 <img src="https://www.hansung.ac.kr/sites/hansung/images/common/NEW_Logo_2.png"
 alt="사진의 주소가 변경되었습니다.">
-<img src="C:\Users\user\Desktop\다운로드.jpg"
+<img src="./img/num2.png"
 alt="사진의 주소가 변경되었습니다.">
 <hr>
 </body>
