--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 <head>
 <meta charset="utf-8">
 <title>자기소개를 해보겠습니다.</title>
+      <style>
+    /* CSS3 스타일 시트 작성 */
+    body {background-color: mistyrose; margin-left: 30px; margin-right: 30px;}
+    h3 {color: purple,text-align : center ;}
+    hr {border: 5px solid yellowgreen;}
+    span {color: blue; font-size: 20px;}
+    </style>
 </head>
 <body>
 <hr>
