--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 <meta charset="utf-8">
 <title>자기소개를 해보겠습니다.</title>
-      <style>
+    <style>
     /* CSS3 스타일 시트 작성 */
     body {background-color: mistyrose; margin-left: 30px; margin-right: 30px;}
     h3 {color: purple,text-align : center ;}
@@ -15,7 +15,7 @@
 </head>
 <body>
 <hr>
-<h1 title="h1태그로 작성했습니다.">안녕하세요. 임미혜입니다.</h1>
+<h1 title="h1태그로 작성했습니다."><span>안녕하세요.</span> 임미혜입니다.</h1>
 <hr>
 <h3>
 <ul>
@@ -46,10 +46,11 @@
 <tr><td>웹프로그래밍</td><td>오후 3시~3시 50분</td></tr>
 </tbody>
 </table>
-<img src="https://www.hansung.ac.kr/sites/hansung/images/common/NEW_Logo_2.png"
-alt="사진의 주소가 변경되었습니다.">
 <img src="./img/num2.png"
+alt="사진의 주소가 변경되었습니다.">
+<img src="C:\Users\user\Desktop\다운로드.jpg"
 alt="사진의 주소가 변경되었습니다.">
 <hr>
 </body>
 </html>
+
