--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 <tr><td>웹프로그래밍</td><td>오후 3시~3시 50분</td></tr>
 </tbody>
 </table>
-<img src="./img/num2.png"
+<img src="https://www.hansung.ac.kr/sites/hansung/images/common/NEW_Logo_2.png"
 alt="사진의 주소가 변경되었습니다.">
-<img src="C:\Users\user\Desktop\다운로드.jpg"
+<img src="./img/num2.png"
 alt="사진의 주소가 변경되었습니다.">
 <hr>
 </body>
