--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>자기소개를 해보겠습니다.</title>
+<title>임미혜의 자기소개를 페이지입니다</title>
     <style>
     /* CSS3 스타일 시트 작성 */
     body {background-color: mistyrose; margin-left: 30px; margin-right: 30px;}
@@ -28,7 +28,7 @@
 <ul>
 <li>곱창전골
 <li>고구마맛탕
-<li>탕후루
+<li>빵
 </ul></ul>
 </h3>
 <table border="1">
@@ -48,7 +48,7 @@
 </table>
 <img src="https://www.hansung.ac.kr/sites/hansung/images/common/NEW_Logo_2.png"
 alt="사진의 주소가 변경되었습니다.">
-<img src="./img/num2.png"
+<img src="./img/me.jpg"
 alt="사진의 주소가 변경되었습니다.">
 <hr>
 </body>
