--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>임미혜의 자기소개를 페이지입니다</title>
+<title>임미혜의 자기소개 페이지입니다</title>
     <style>
     /* CSS3 스타일 시트 작성 */
     body {background-color: mistyrose; margin-left: 30px; margin-right: 30px;}
@@ -19,10 +19,14 @@
 <hr>
 <h3>
 <ul>
+    <img src="https://www.hansung.ac.kr/sites/hansung/images/common/NEW_Logo_2.png"
+    alt="사진의 주소가 변경되었습니다.">
+    <img src="./img/me.jpg"
+    alt="사진의 주소가 변경되었습니다." width="240" height="80">
 <li>이름 : 임미혜
 <li><a href="https://futureplus.hansung.ac.kr/ko/department/consulting"target="_blank">한성대학교 : 비즈니스컨설팅학과</a>
 <li><a href="b.html"target="_blank">회원가입</a>
-<li>주소 : 경기도 양주시 옥정동로 212
+<li>주소 : 경기도 양주시 옥정
 <li>취미 : 강아지 산책
 <li>~내가 좋아하는 음식~
 <ul>
@@ -46,10 +50,7 @@
 <tr><td>웹프로그래밍</td><td>오후 3시~3시 50분</td></tr>
 </tbody>
 </table>
-<img src="https://www.hansung.ac.kr/sites/hansung/images/common/NEW_Logo_2.png"
-alt="사진의 주소가 변경되었습니다.">
-<img src="./img/me.jpg"
-alt="사진의 주소가 변경되었습니다.">
+
 <hr>
 </body>
 </html>
