--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
 <hr>
 <h3>
 <ul>
-    <img src="https://www.hansung.ac.kr/sites/hansung/images/common/NEW_Logo_2.png"
-    alt="사진의 주소가 변경되었습니다.">
-    <img src="./img/me.jpg"
-    alt="사진의 주소가 변경되었습니다." width="240" height="80">
+<li> <img src="https://www.hansung.ac.kr/sites/hansung/images/common/NEW_Logo_2.png"  alt="사진의 주소가 변경되었습니다." width="480" height="160">
+<li> <img src="./img/me.jpg" alt="사진의 주소가 변경되었습니다." width="480" height="160">
 <li>이름 : 임미혜
 <li><a href="https://futureplus.hansung.ac.kr/ko/department/consulting"target="_blank">한성대학교 : 비즈니스컨설팅학과</a>
 <li><a href="b.html"target="_blank">회원가입</a>
