--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <body>
 <hr>
 <h1 title="h1태그로 작성했습니다."><span>안녕하세요.</span> 임미혜입니다.</h1>
+<img src="./img/me.jpg" alt="사진의 주소가 변경되었습니다." width="480" height="160">
 <hr>
 <h3>
-<ul>
-<li> <img src="https://www.hansung.ac.kr/sites/hansung/images/common/NEW_Logo_2.png"  alt="사진의 주소가 변경되었습니다." width="480" height="160">
-<li> <img src="./img/me.jpg" alt="사진의 주소가 변경되었습니다." width="480" height="160">
+ <img src="https://www.hansung.ac.kr/sites/hansung/images/common/NEW_Logo_2.png"  alt="사진의 주소가 변경되었습니다.">
+ <ul> 
 <li>이름 : 임미혜
 <li><a href="https://futureplus.hansung.ac.kr/ko/department/consulting"target="_blank">한성대학교 : 비즈니스컨설팅학과</a>
 <li><a href="b.html"target="_blank">회원가입</a>
@@ -28,13 +28,14 @@
 <li>취미 : 강아지 산책
 <li>~내가 좋아하는 음식~
 <ul>
-<li>곱창전골
-<li>고구마맛탕
-<li>빵
+    <li>곱창전골
+    <li>고구마맛탕
+    <li>빵
 </ul></ul>
 </h3>
+    
 <table border="1">
-<caption>시간표</caption>
+<caption>토요일 시간표</caption>
 <thead>
 <tr><th>과목</th><th>시간</th></tr>
 </thead>
@@ -52,4 +53,3 @@
 <hr>
 </body>
 </html>
-
