--- a/index.html
+++ b/index.html
@@ -4,52 +4,62 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>임미혜의 자기소개 페이지입니다</title>
-    <style>
-    /* CSS3 스타일 시트 작성 */
-    body {background-color: mistyrose; margin-left: 30px; margin-right: 30px;}
-    h3 {color: purple,text-align : center ;}
-    hr {border: 5px solid yellowgreen;}
-    span {color: blue; font-size: 20px;}
-    </style>
+
+    <title>임미혜의 자기소개 페이지입니다</title>
+        <style>
+        /* CSS3 스타일 시트 작성 */
+        body {background-color: mistyrose; margin-left: 30px; margin-right: 30px;}
+        h3 {color: purple,text-align : center ;}
+        hr {border: 5px solid yellowgreen;}
+        span {color: green; font-size: 20px;}
+        li:hover { background : yellowgreen;} /* 가상 클래스 셀렉터 */ 
+        strong { text-decoration : overline;} /* 윗줄 */
+        div {
+        background : beige;
+        padding : 30px;
+        border : 5px dotted navy;
+        margin : 30px;
+            }       
+        </style>
 </head>
 <body>
-<hr>
-<h1 title="h1태그로 작성했습니다."><span>안녕하세요.</span> 임미혜입니다.</h1>
-<img src="./img/me.jpg" alt="사진의 주소가 변경되었습니다." width="480" height="160">
-<hr>
-<h3>
- <img src="https://www.hansung.ac.kr/sites/hansung/images/common/NEW_Logo_2.png"  alt="사진의 주소가 변경되었습니다.">
- <ul> 
-<li>이름 : 임미혜
-<li><a href="https://futureplus.hansung.ac.kr/ko/department/consulting"target="_blank">한성대학교 : 비즈니스컨설팅학과</a>
-<li><a href="b.html"target="_blank">회원가입</a>
-<li>주소 : 경기도 양주시 옥정
-<li>취미 : 강아지 산책
-<li>~내가 좋아하는 음식~
-<ul>
-    <li>곱창전골
-    <li>고구마맛탕
-    <li>빵
-</ul></ul>
-</h3>
+    <hr>
+        <h2 title="h1태그로 작성했습니다."><span>안녕하세요.</span> 임미혜입니다👧🏻 </h2>
+        <img src="./img/me.jpg" alt="사진의 주소가 변경되었습니다." width="480" height="160">
+    <hr>
+    <h3>
+        <div><img src="https://www.hansung.ac.kr/sites/hansung/images/common/NEW_Logo_2.png"  alt="사진의 주소가 변경되었습니다."></div>
+        <ul> 
+            <li>이름 : 임미혜
+            <li><a href="https://futureplus.hansung.ac.kr/ko/department/consulting"target="_blank">한성대학교 : 비즈니스컨설팅학과</a>
+            <li><a href="b.html"target="_blank">회원가입</a>
+            <li>주소 : 경기도 양주시 옥정
+            <li>취미 : 강아지 산책🐕
+            <li>~내가 좋아하는 음식~
+            <ul>
+                <li>딸기 🍓
+                <li>푸딩 🍮
+                <li>빵 🥐
+            </ul>
+        </ul>
+    </h3>
     
-<table border="1">
-<caption>토요일 시간표</caption>
-<thead>
-<tr><th>과목</th><th>시간</th></tr>
-</thead>
-<tfoot>
-<tr><th>비즈니스 컨설팅학과</th><th>2304024 임미혜</th></tr>
-</tfoot>
-<tbody>
-<tr><td>데이터사이언스기초</td><td>오전 9시~9시 50분</td></tr>
-<tr><td>AI를 위한 기초수학</td><td>오전 10시~10시 50분</td></tr>
-<tr><td>C프로그래밍</td><td>오후 1시~2시 50분</td></tr>
-<tr><td>웹프로그래밍</td><td>오후 3시~3시 50분</td></tr>
-</tbody>
-</table>
+    <table border="1">
+        <caption style="background-color:skyblue"><strong>토요일 시간표</strong></caption>
+        <thead>
+            <tr><th>과목</th><th>시간</th></tr>
+        </thead>
+        <tfoot>
+            <tr><th>비즈니스 컨설팅학과</th><th>2304024 임미혜</th></tr>
+        </tfoot>
+        <tbody>
+            <tr><td>데이터사이언스기초</td><td>오전 9시~9시 50분</td></tr>
+            <tr><td>AI를 위한 기초수학</td><td>오전 10시~10시 50분</td></tr>
+            <tr><td>C프로그래밍</td><td>오후 1시~2시 50분</td></tr>
+            <tr><td>웹프로그래밍</td><td>오후 3시~3시 50분</td></tr>
+        </tbody>
+    </table>
 
-<hr>
+    <hr>
 </body>
 </html>
