--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         padding : 30px;
         border : 5px dotted navy;
         margin : 30px;
-            }       
+            }   
+        ul{list-style-type:"🩵";}
         </style>
 </head>
 <body>
