--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
 <body>
     <hr>
         <h2 title="h1태그로 작성했습니다."><span>안녕하세요.</span> 임미혜입니다👧🏻 </h2>
+        <a href="javascript:alert('🍀행운이 가득한 하루가 될 예정입니다(❁´◡`❁)💗')">
+            !오늘의 운세를 확인해보세요!</a>
         <img src="./img/me.jpg" alt="사진의 주소가 변경되었습니다." width="480" height="160">
+    <script>
+    	document.write("<mark>마우스를 올려보세요!</mark>");
+    </script>
+        <img src="./img/mh_1.jpg" alt="사진의 주소가 변경되었습니다😂" 
+		onmouseover="this.src='./img/wj_1.jpg'"
+		onmouseout="this.src='./img/mh_1.jpg'">
     <hr>
     <h3>
         <div><img src="https://www.hansung.ac.kr/sites/hansung/images/common/NEW_Logo_2.png"  alt="사진의 주소가 변경되었습니다."></div>
