--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <a href="javascript:alert('🍀행운이 가득한 하루가 될 예정입니다(❁´◡`❁)💗')">
             !오늘의 운세를 확인해보세요!<br></a>
         <img src="./img/me.jpg" alt="사진의 주소가 변경되었습니다." width="480" height="160">
-    	<img src="./img/mh_1.jpeg" alt="사진의 주소가 변경되었습니다😂" width="480" height="480"
+    	<hr><img src="./img/mh_1.jpeg" alt="사진의 주소가 변경되었습니다😂" width="300" height="450"
 		onmouseover="this.src='./img/wj_1.jpeg'"
 		onmouseout="this.src='./img/mh_1.jpeg'">
     <script>
-    	document.write("<br><mark>마우스를 올려보세요!</mark><br>");
+    	document.write("<mark>마우스를 올려보세요!</mark><br>");
     </script>
         
     <hr>
