--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		onmouseover="this.src='./img/wj_1.jpeg'"
 		onmouseout="this.src='./img/mh_1.jpeg'">
     <script>
-    	document.write("<mark>마우스를 올려보세요!</mark><br>");
+    	document.write("<mark>마우스를 올려보세요! 귀여운 강아지가 나와요🐶</mark><br>");
     </script>
         
     <hr>
