--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         /* CSS3 스타일 시트 작성 */
         body {background-color: mistyrose; margin-left: 30px; margin-right: 30px;}
         h3 {color: purple,text-align : center ;}
-        hr {border: 5px solid yellowgreen;}
+        hr {border: 3px solid gray;}
         span {color: green; font-size: 20px;}
         li:hover { background : yellowgreen;} /* 가상 클래스 셀렉터 */ 
         strong { text-decoration : overline;} /* 윗줄 */
@@ -44,7 +44,7 @@
             <li>이름 : 임미혜
             <li><a href="https://futureplus.hansung.ac.kr/ko/department/consulting"target="_blank">한성대학교 : 비즈니스컨설팅학과</a>
             <li><a href="b.html"target="_blank">회원가입</a>
-            <li>주소 : 경기도 양주시 옥정
+            <li>주소 : 경기도 북부
             <li>취미 : 강아지 산책🐕
             <li>~내가 좋아하는 음식~
             <ul>
