--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         /* CSS3 스타일 시트 작성 */
         body {background-color: mistyrose; margin-left: 30px; margin-right: 30px;}
         h3 {color: purple,text-align : center ;}
-        hr {border: 3px solid gray;}
+        hr {border: 2.5px solid gray;}
         span {color: green; font-size: 20px;}
         li:hover { background : yellowgreen;} /* 가상 클래스 셀렉터 */ 
         strong { text-decoration : overline;} /* 윗줄 */
@@ -56,7 +56,7 @@
     </h3>
     
     <table border="1">
-        <caption style="background-color:skyblue"><strong>토요일 시간표</strong></caption>
+        <caption style="background-color:lightgray"><strong>토요일 시간표</strong></caption>
         <thead>
             <tr><th>과목</th><th>시간</th></tr>
         </thead>
