--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         body {background-color: mistyrose; margin-left: 30px; margin-right: 30px;}
         h3 {color: purple,text-align : center ;}
         hr {border: 2.5px solid gray;}
-        span {color: green; font-size: 20px;}
+        span {color: green; font-size: 25px;}
         li:hover { background : yellowgreen;} /* 가상 클래스 셀렉터 */ 
         strong { text-decoration : overline;} /* 윗줄 */
         div {
@@ -20,14 +20,14 @@
         border : 5px dotted navy;
         margin : 30px;
             }   
-        ul{list-style-type:"🩵";}
+        ul{list-style-type:"🔹";}
         </style>
 </head>
 <body>
     <hr>
-        <h2 title="h1태그로 작성했습니다."><span>안녕하세요.</span> 임미혜입니다👧🏻 </h2>
+        <h2 title="h1태그로 작성했습니다."><span>안녕하세요🙌</span> 임미혜입니다🦦 </h2>
         <a href="javascript:alert('🍀행운이 가득한 하루가 될 예정입니다(❁´◡`❁)💗')">
-            !오늘의 운세를 확인해보세요!<br></a>
+            ✨오늘의 운세를 확인해보세요✨<br></a>
         <img src="./img/me.jpg" alt="사진의 주소가 변경되었습니다." width="480" height="160">
     <hr>
 	<img src="./img/mh_1.jpeg" alt="사진의 주소가 변경되었습니다😂" width="250" height="300"
@@ -39,7 +39,7 @@
         
     <hr>
     <h3>
-        <div><img src="https://www.hansung.ac.kr/sites/hansung/images/common/NEW_Logo_2.png"  alt="사진의 주소가 변경되었습니다."></div>
+        <div><img src="https://www.hansung.ac.kr/sites/hansung/images/common/NEW_Logo_2.png" ; alt="사진의 주소가 변경되었습니다."></div>
         <ul> 
             <li>이름 : 임미혜
             <li><a href="https://futureplus.hansung.ac.kr/ko/department/consulting"target="_blank">한성대학교 : 비즈니스컨설팅학과</a>
